--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<title>Kushan Patel</title>
+	<meta charset="utf-8"/>
+	
 	<link rel="stylesheet" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="app.js"></script>
