Fixing up errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Kushan Patel</title>
 	<meta charset="utf-8"/>
-	
+
 	<link rel="stylesheet" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="app.js"></script>
@@ -33,7 +33,7 @@
 					<h2 class = 'a-text'>About Kushan</h2>
 				</div>
 				<aside>
-				<p class = 'a-descripton'>Kushan Patel has just started out in the Computer field, but his love of web development dates back to 2002. After going to school to learn Computer Science, Kushan decided it was time to pursue a new challenge, and a career change to front end development was made. In February he became a Spring/Summer cohort at Thinkful. Kushan now spends his days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently he resides in New Jersey. <br></br><br> His hobbies include sports, hiking, writing comedy, learning French, traveling (eventually), and talking about himself in the third person. He is also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
+				<p class = 'a-description'>Kushan Patel has just started out in the Computer field, but his love of web development dates back to 2002. After going to school to learn Computer Science, Kushan decided it was time to pursue a new challenge, and a career change to front end development was made. In February he became a Spring/Summer cohort at Thinkful. Kushan now spends his days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently he resides in New Jersey. <br></br><br> His hobbies include sports, hiking, writing comedy, learning French, traveling (eventually), and talking about himself in the third person. He is also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
 				</aside>
 			</article>
 			<article class='contact' id='contact'>
@@ -56,12 +56,20 @@
 				<div class = 'banner'>
 					<h2 class = 'p-text'>Portfolio</h2>
 				</div>
-				<aside>
+				<aside class = 'binder'>
 					<ul class = 'portfolio'>
-						<li class ='square'><a href="https://dl.dropboxusercontent.com/u/263968982/SA.html" target = '_blank' class ='portfolio-1'></a></li>
-						<li class ='square'><a href="#" class ='portfolio-1'></a></li>
-						<li class ='square'><a href="#" class ='portfolio-1'></a></li>
-						<li class ='square'><a href="#" class ='portfolio-1'></a></li>
+						<li class ='square'><a href="https://dl.dropboxusercontent.com/u/263968982/SA.html" target = '_blank' class ='portfolio-1'></a>
+						<p class = 'summary'>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p>
+						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" targert= '_blank' class ='portfolio-2'></a>
+						<p class = 'summary'>A Streetfighter app that let's you use Rhy-ku and some of his move sets. Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/hot-or-cold-starter/" target='_blank' class ='portfolio-3'></a>
+						<p class = 'summary'>This Hot-or-Cold game app asks you to guess a number and let's you know if you get closer or further from the correct answer. Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/shopping_list_app/main.html" target='_blank' class ='portfolio-4'></a>
+						<p class = 'summary'>A shopping list app that gives you the complete "grocery-run" experience. Lets you keep track of what's needed and what's already in your cart!  Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						</li>
 					</ul>
 				</aside>
 			</article>
