--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 						<li class ='square'><a href="https://dl.dropboxusercontent.com/u/263968982/SA.html" target = '_blank' class ='portfolio-1'></a>
 						<p class = 'summary'>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p>
 						</li>
-						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" targert= '_blank' class ='portfolio-2'></a>
+						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" target= '_blank' class ='portfolio-2'></a>
 						<p class = 'summary'>A Streetfighter app that let's you use Rhy-ku and some of his move sets. Use of HTML5, CSS3, JavaScript, and jQuery.</p>
 						</li>
 						<li class ='square'><a href="http://kushanp12.github.io/hot-or-cold-starter/" target='_blank' class ='portfolio-3'></a>
