--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,7 @@
 		</section>
 		<footer>
 			<hr>
+			<p class = 'mom'>* Dedicate this page to my mother Mina Patel 08/07/2014 - Never Forget.</p>
 		</footer>
 	</div>
 </body>
