--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="app.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class ='container'>
@@ -36,7 +38,7 @@
 				</div>
 				<aside>
 				<img class = 'image'></img>
-				<p class = 'a-description'>Kushan Patel has just started out in the Computer field, but his love of web development dates back to 2002. After going to school to learn Computer Science, Kushan decided it was time to pursue a new challenge, and a career change to front end development was made. In February he became a Spring/Summer cohort at Thinkful. Kushan now spends his days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently he resides in New Jersey. <br></br><br> His hobbies include sports, hiking, writing comedy, learning French, traveling (eventually), and talking about himself in the third person. He is also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
+				<p class = 'a-description'>Kushan Patel has just started out in the Computer field, but his love of web development dates back to 2002. After going to school to learn Computer Science, Kushan decided it was time to pursue a new challenge, and a career change to front end development was made. In February he became a Spring/Summer cohort at Thinkful. Kushan now spends his days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently he resides in New Jersey. <br></br><br> His hobbies include sports, hiking, writing comedy, learning French, traveling, and talking about himself in the third person. He is also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
 				</aside>
 			</article>
 			<article class='contact' id='contact'>
