--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
 	<script src="app.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class ='container'>
@@ -26,8 +27,8 @@
 		</section>
 		<section class = 'home' id ='home'>
 			<div class='box-text'>
-				<h1 class = 'title'>Kushan Patel</h1>
-				<a href="#about" class= 'get-to-know'>Get to Know ></a>
+				<h1 class = 'title'>"You make your own luck."</h1>
+				<a href="#about" class= 'get-to-know'>My Story ></a>
 			</div>
 		</section>
 		<section class='information'>
