--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
 				</div>
 				<aside class = 'binder'>
 					<ul class = 'portfolio'>
-						<li class ='square'><a href="https://dl.dropboxusercontent.com/u/263968982/SA.html" target = '_blank' class ='portfolio-1'></a>
+						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" target = '_blank' class ='portfolio-1'></a>
 						<p class = 'summary'>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p>
 						</li>
 						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" target= '_blank' class ='portfolio-2'></a>
