--- a/portfolio.html
+++ b/portfolio.html
@@ -65,17 +65,29 @@
 				</div>
 				<aside class = 'binder'>
 					<ul class = 'portfolio'>
-						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" target = '_blank' class ='portfolio-1'></a>
-						<p class = 'summary'>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p>
+						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" target = '_blank' class ='portfolio-1'>
+							<div class = 'example'>
+							<div class = 'summary'><p>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p></div>
+							</div>
+						</a>
 						</li>
-						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" target= '_blank' class ='portfolio-2'></a>
-						<p class = 'summary'>A Streetfighter app that let's you use Rhy-ku and some of his move sets. Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						<li class ='square'><a href="http://kushanp12.github.io/jquery-streetfighter/main.html" target= '_blank' class ='portfolio-2'>
+							<div class = 'example'>
+							<div class = 'summary'><p>A Streetfighter app that let's you use Rhy-ku and some of his move sets. Use of HTML5, CSS3, JavaScript, and jQuery.</p></div>
+							</div>
+						</a>
 						</li>
-						<li class ='square'><a href="http://kushanp12.github.io/hot-or-cold-starter/" target='_blank' class ='portfolio-3'></a>
-						<p class = 'summary'>This Hot-or-Cold game app asks you to guess a number and let's you know if you get closer or further from the correct answer. Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						<li class ='square'><a href="http://kushanp12.github.io/hot-or-cold-starter/" target='_blank' class ='portfolio-3'>
+							<div class = 'example'>
+							<div class = 'summary'><p>This Hot-or-Cold game app asks you to guess a number. Use of HTML5, CSS3, JavaScript, and jQuery.</p></div>
+							</div>
+						</a>
 						</li>
-						<li class ='square'><a href="http://kushanp12.github.io/shopping_list_app/main.html" target='_blank' class ='portfolio-4'></a>
-						<p class = 'summary'>A shopping list app that gives you the complete "grocery-run" experience. Lets you keep track of what's needed and what's already in your cart!  Use of HTML5, CSS3, JavaScript, and jQuery.</p>
+						<li class ='square'><a href="http://kushanp12.github.io/shopping_list_app/main.html" target='_blank' class ='portfolio-4'>
+							<div class = 'example'>
+							<div class = 'summary'><p>A shopping list app that gives you the complete "grocery-run" experience. Use of HTML5, CSS3, JavaScript, and jQuery.</p></div>
+							</div>
+						</a>
 						</li>
 					</ul>
 				</aside>
