--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 				</div>
 				<aside>
 				<img class = 'image'></img>
-				<p class = 'a-description'>Kushan Patel has just started out in the Computer field, but his love of web development dates back to 2002. After going to school to learn Computer Science, Kushan decided it was time to pursue a new challenge, and a career change to front end development was made. In February he became a Spring/Summer cohort at Thinkful. Kushan now spends his days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently he resides in New Jersey. <br></br><br> His hobbies include sports, hiking, writing comedy, learning French, traveling, and talking about himself in the third person. He is also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
+				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br></br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
 				</aside>
 			</article>
 			<article class='contact' id='contact'>
