--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
 				</div>
 				<aside class = 'binder'>
 					<ul class = 'portfolio'>
-						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" target = '_blank' class ='portfolio-1'>
+						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" class ='portfolio-1'>
 							<div class = 'example'>
 							<div class = 'summary'><p>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p></div>
 							</div>
