--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Kushan Patel</title>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	<link rel="stylesheet" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -64,7 +65,7 @@
 				</div>
 				<aside class = 'binder'>
 					<ul class = 'portfolio'>
-						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" class ='portfolio-1'>
+						<li class ='square'><a href="http://kushanp12.github.io/Shultz/SA.html" target = '_blank' class ='portfolio-1'>
 							<div class = 'example'>
 							<div class = 'summary'><p>An experimental landing page for a business model. The compnay is called Shultz Associates. Use HTML5 and CSS3.</p></div>
 							</div>
