--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 				</div>
 				<aside>
 				<img class = 'image'></img>
-				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br></br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants/Knicks/Yankees/Rangers fan.</br></p>
+				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br></br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants, Knicks, Yankees, Rangers fan.</br></p>
 				</aside>
 			</article>
 			<article class='contact' id='contact'>
@@ -95,8 +95,27 @@
 							</div>
 						</a>
 						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/Allamuchy_Liq/al.html" target='_blank' class ='portfolio-6'>
+							<div class = 'example'>
+							<div class = 'summary'><p>A small business landing page for a wine shop. Use of HTML5, SEO, CSS3, JavaScript, and jQuery.</p></div>
+							</div>
+						</a>
+						</li>
 					</ul>
 				</aside>
+				<div class = 'testimonial'>
+					<a href="testimonial" class = 't-link'>Testimonials ></a>
+				</div>
+			</article>
+			<article class = 'experience' id = 'testimonial'>
+				<div class = 'banner'>
+					<h2 class = 't-text'>Testimonials</h2>
+				</div>
+				<section class = 't-box'>
+					<div class= 'quote'>
+						<p class = 't-description'>"My experience with Kushan was great. He did everything I requested and more. A really well done web site for my business!"<br>- G.S. Patel</p>
+					</div>
+				</section>
 			</article>
 		</section>
 		<footer>
