--- a/portfolio.html
+++ b/portfolio.html
@@ -104,12 +104,16 @@
 					</ul>
 				</aside>
 				<div class = 'testimonial'>
-					<a href="testimonial" class = 't-link'>Testimonials ></a>
+					<a href="#testimonial" class = 't-link'>Testimonials ></a>
 				</div>
 			</article>
 			<article class = 'experience' id = 'testimonial'>
 				<div class = 'banner'>
 					<h2 class = 't-text'>Testimonials</h2>
+					<a href="#designs" class = 'arrow'>
+					<div class = 't-arrow'>
+					</div>
+					</a>
 				</div>
 				<section class = 't-box'>
 					<div class= 'quote'>
