--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,10 @@
 				<aside>
 					<ul class = 'contact-menu'>
 						<li><a href="https://www.facebook.com/kushan.patel.121" target = '_blank' class='facebook'></a></li>
-						<li><a href="#" class= 'twitter'></a></li>
-						<li><a href="#" class='linkedin'></a></li>
-						<li><a href="#" class='google-p'></a></li>
+						<li><a href="https://twitter.com/kushp12" class= 'twitter' target='_blank'></a></li>
+						<li><a href="https://www.linkedin.com/profile/view?id=320121476&trk=nav_responsive_tab_profile" class='linkedin' target = '_blank'></a></li>
+						<li><a href="https://plus.google.com/u/1/111406128429966405982/about" class='google-p' target='_blank'></a></li>
+						<li><a href="mailto:kushanp12@gmail.com" class='gmail' target = '_blank'></a></li>
 					</ul>
 					<p class='test'>Kushan currently resides in New Jersey. Best way of contact is through email: kushanp12@gmail.com.</p>
 				</aside>
