--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
 					<h2 class = 'a-text'>About Kushan</h2>
 				</div>
 				<aside>
-				<img class = 'image'></img>
-				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br></br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants, Knicks, Yankees, Rangers fan.</br></p>
+				<img class = 'image'>
+				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants, Knicks, Yankees, Rangers fan.</p>
 				</aside>
 			</article>
 			<article class='contact' id='contact'>
