Style_changes_and_new_.portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,12 @@
 							</div>
 						</a>
 						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/API/api.html" target='_blank' class ='portfolio-7'>
+							<div class = 'example'>
+							<div class = 'summary'><p>The Laugh is a site showing the use of the Instagram API. Use of HTML5, CSS3, JavaScript, jQuery, and AJAX.</p></div>
+							</div>
+						</a>
+						</li>
 					</ul>
 				</aside>
 				<div class = 'testimonial'>
