Changed_nav_font

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<title>Kushan Patel</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name = 'description' content = "Kushan Patel's portfolio">
 
 	<link rel="stylesheet" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -18,7 +19,7 @@
 	<div class ='container'>
 		<section class = 'header'>
 			<div>
-			<h4><strong>KUSHAN</strong> <span>PATEL</span></h4>
+			<h3><strong>KUSHAN</strong> <span>PATEL</span></h3>
 			</div>
 			<ul class = 'nav'>
 				<li><a href="#about" class ='about-text'>About</a></li>
@@ -28,23 +29,23 @@
 			</ul>
 		</section>
 		<section class = 'home' id ='home'>
-			<div class='box-text'>
+			<header class='box-text'>
 				<h1 class = 'title'>"You make your own luck."</h1>
 				<a href="#about" class= 'get-to-know'>My Story ></a>
-			</div>
+			</header>
 		</section>
-		<section class='information'>
-			<article class= 'about' id='about'>
+		<article itemscope class='information'>
+			<section class= 'about' id='about'>
 				<hr>
 				<div class = 'banner'>
 					<h2 class = 'a-text'>About Kushan</h2>
 				</div>
 				<aside>
-				<img class = 'image' src = ''>
-				<p class = 'a-description'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, and Javascript/jQuery with future plans to learn Node.js. Currently I reside in New Jersey. <br><br> My hobbies include sports, hiking, writing comedy, learning French, traveling. I'm also known to be a die hard New York Giants, Knicks, Yankees, Rangers fan.</p>
+				<img class = 'image' src = 'https://dl.dropboxusercontent.com/u/263968982/rsz_10612640_10202441596904818_5877643349902362618_n.jpg' alt = 'Kushan'>
+				<p class = 'a-description' itemprop = 'about'>Hi, My name is Kushan Patel and I am a Web Developer. After going to school to learn Computer Science, I decided it was time to pursue a new challenge, and a career change to front end development was made. In February I became a Spring/Summer cohort at Thinkful. I build web sites that are easily usable from a wide array of devices without requiring separate sites for different platforms. I now spend my days writing HTML5, CSS3, JavaScript, jQuery, JSON, AJAX, PHP, and MySQL with future plans to learn Node.js. I am a self-starter and a born team player, it is easy for me to work well in a team fostered environment which makes my work easy and fun to do. <br><br> My hobbies include sports, hiking, writing comedy, learning French, and traveling. I'm also known to be a die hard New York Giants, Knicks, Yankees, Rangers fan.</p>
 				</aside>
-			</article>
-			<article class='contact' id='contact'>
+			</section>
+			<section class='contact' id='contact'>
 				<hr>
 				<div class = 'banner'>
 					<h2 class = 'c-text'>Contact</h2>
@@ -59,8 +60,8 @@
 					</ul>
 					<p class='test'>Kushan currently resides in New Jersey. Best way of contact is through email: kushanp12@gmail.com.</p>
 				</aside>
-			</article>
-			<article class='designs' id='designs'>
+			</section>
+			<section class='designs' id='designs'>
 				<div class = 'banner'>
 					<h2 class = 'p-text'>Portfolio</h2>
 				</div>
@@ -113,8 +114,8 @@
 				<div class = 'testimonial'>
 					<a href="#testimonial" class = 't-link'>Testimonials ></a>
 				</div>
-			</article>
-			<article class = 'experience' id = 'testimonial'>
+			</section>
+			<section class = 'experience' id = 'testimonial'>
 				<div class = 'banner'>
 					<h2 class = 't-text'>Testimonials</h2>
 					<a href="#designs" class = 'arrow'>
@@ -127,8 +128,8 @@
 						<p class = 't-description'>"My experience with Kushan was great. He did everything I requested and more. A really well done web site for my business!"<br>- G.S. Patel</p>
 					</div>
 				</section>
-			</article>
-		</section>
+			</section>
+		</article>
 		<footer>
 			<hr>
 			<p class = 'mom'>* Dedicate this page to my mother Mina Patel 08/07/2014 - Never Forget.</p>
