--- a/portfolio.html
+++ b/portfolio.html
@@ -97,15 +97,15 @@
 							</div>
 						</a>
 						</li>
-						<li class ='square'><a href="http://kushanp12.github.io/Allamuchy_Liq/al.html" target='_blank' class ='portfolio-6'>
-							<div class = 'example'>
-							<div class = 'summary'><p>A small business landing page for a wine shop. Use of HTML5, SEO, CSS3, JavaScript, and jQuery.</p></div>
-							</div>
-						</a>
-						</li>
 						<li class ='square'><a href="http://kushanp12.github.io/API/api.html" target='_blank' class ='portfolio-7'>
 							<div class = 'example'>
 							<div class = 'summary'><p>The Laugh is a site showing the use of the Instagram API. Use of HTML5, CSS3, JavaScript, jQuery, and AJAX.</p></div>
+							</div>
+						</a>
+						</li>
+						<li class ='square'><a href="http://kushanp12.github.io/Allamuchy_Liq/al.html" target='_blank' class ='portfolio-6'>
+							<div class = 'example'>
+							<div class = 'summary'><p>A small business landing page for a wine shop in NJ. Use of HTML5, SEO, CSS3, JavaScript, and jQuery.</p></div>
 							</div>
 						</a>
 						</li>
